# these

./: .gitignore  .gitmodules  .simple-git-hooks.json  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: commit.yml  deploy-docs.yml  publish.yml  unit_tests.yml
documentation/: .gitignore  .prettierrc.json  astro.config.mjs  markdoc.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
documentation/public/playground/: index.html
documentation/public/playground/_app/: version.json
documentation/public/playground/_app/immutable/assets/: 0.CMNAEk5I.css  _page.ZTqQGOpI.css  hecate_bg.B_QtrzMS.wasm  hecate_bg.BmuyVLFa.wasm  hecate_bg.npNVEIBO.wasm
documentation/public/playground/_app/immutable/chunks/: 98t1C0Ls.js  B3n7_GNY.js  B9Wvj7kD.js  BFfV2Fhf.js  BIiAUV6v.js  BiMYQU74.js  CLHzdWKz.js  Ccg59MuO.js  ChhizTbv.js  D-TuGdn3.js  DUYpbP9Z.js  DhN3w0m4.js  DnVWwKql.js  Dx4UTkTT.js  Oxa2fRnZ.js  fUA9DmmS.js  iI-Sx4xs.js
documentation/public/playground/_app/immutable/entry/: app.BbSlRJcX.js  app.BpIRNLDg.js  app.C6YOK2T3.js  start.2m7q_Dju.js  start.CpKtb-5_.js  start.CqQL2FeA.js
documentation/public/playground/_app/immutable/nodes/: 0.CGLI9se9.js  0.IJa4q6lD.js  1.B_qMxQpW.js  1.Cv5zqkMr.js  1.DwkAygxp.js  (+3 more)
documentation/src/: content.config.ts
documentation/src/components/: CodeGen.svelte  Diagram.astro
documentation/src/content/docs/: index.mdx
documentation/src/content/docs/guides/: example.md  getting-started.md  poisson.md
documentation/src/content/docs/overview/: architecture.md  code-gen.md  intro.md  questions.md  roadmap.md  subject.md
documentation/src/content/docs/reference/: bibliography.md  building-blocks.md  dependencies.mdx  numerical-methods.md
documentation/src/content/docs/research/: agent.md  discussions.md  numerical-libraries.md  sketchbook.md  template-engines.md
documentation/src/styles/: custom.css
dsl/: example.yaml
hecate/: Cargo.toml  build.rs  hecate-json-schema.json  test.cpp
hecate-playground/: package.json  pnpm-lock.yaml  vite.config.ts
hecate-playground/src/: hooks.ts
hecate-playground/src/routes/: +layout.svelte  +page.svelte  schema.yaml
hecate/.github/workflows/: unit_tests.yml
hecate/app/: package.json  pnpm-lock.yaml
hecate/app/src/: app.d.ts
hecate/app/src-tauri/: Cargo.toml  tauri.conf.json
hecate/app/src/lib/math/: MathField.svelte
hecate/app/src/routes/: +page.svelte
hecate/cli/: Cargo.toml
hecate/cli/src/: main.rs
hecate/cpp/: CMakeLists.txt
hecate/cpp/src/: main.cpp  main.hpp
hecate/entity/: Cargo.toml
hecate/entity/src/: file.rs  job.rs  lib.rs
hecate/entity/src/job/: error.rs  scheduler.rs  service.rs  workflow.rs
hecate/executor/: Cargo.toml
hecate/executor/src/: lib.rs  local_executor.rs  ssh_executor.rs  utils.rs
hecate/hecate/: Cargo.toml  build.rs  hecate-json-schema.json
hecate/hecate/examples/: heat-eq.rs  wave-eq.rs
hecate/hecate/input-schemas/: heat-eq.hecate.yml  wave-eq-by-claude.hecate.yml  wave-eq.hecate.yml
hecate/hecate/js/: package.json  rollup.config.mjs
hecate/hecate/src/: lib.rs  main.rs
hecate/hecate/src/codegen/: building_block.rs  input_schema.rs
hecate/hecate/src/codegen/building_block/: deal_ii.rs
hecate/hecate/src/codegen/building_block/deal_ii/: function_def.rs
hecate/hecate/src/codegen/input_schema/: cpp_source_template.cpp  mesh.rs  quantity.rs  range.rs  reference.rs  unit.rs
hecate/hecate/src/codegen/input_schema/deal.ii/: CMakeLists.txt
hecate/hecate/src/symbolic/: abc.rs  expr.rs  system.rs
hecate/hecate/src/symbolic/expr/: add.rs  diff.rs  eq.rs  function.rs  integral.rs  mul.rs  ops.rs  rational.rs  symbol.rs
hecate/hecate/src/symbolic/expr/ops/: factor.rs  parse.rs  subs.rs
hecate/input-schemas/: wave-eq.yml
hecate/js/: package.json  pnpm-lock.yaml  rollup.config.mjs
hecate/js/src/: main.js
hecate/mcp-server/: CMakeLists.txt  Cargo.toml  main.cpp
hecate/mcp-server/examples/: create_job.rs  update_job_status.rs
hecate/mcp-server/src/: executor.rs  lib.rs  main.rs  scheduler.rs  workflow.rs
hecate/migration/: Cargo.toml
hecate/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250619_072715_add_cluster.rs  m20250620_091631_add_cluster_and_num_nodes.rs  m20250620_094455_add_queue.rs  m20250620_232605_add_code_and_cmakelists.rs  m20250624_093459_add_code_filename.rs  m20250624_094955_add_remote_job_id.rs  m20250624_123858_add_compiler.rs  m20250624_135928_add_walltime.rs
hecate/src/: build.rs  codegen.rs  js.rs  lib.rs  main.rs  symbolic.rs  wrapper.h
hecate/src/codegen/: building_block.rs  input_schema.rs
hecate/src/codegen/building_block/: deal_ii.rs
hecate/src/codegen/building_block/deal_ii/: function_def.rs
hecate/src/codegen/input_schema/: cpp_source_template.cpp  mesh.rs  quantity.rs  range.rs  reference.rs
hecate/src/codegen/input_schema/deal.ii/: CMakeLists.txt
hecate/src/symbolic/: abc.rs  expr.rs  system.rs
hecate/src/symbolic/expr/: add.rs  diff.rs  eq.rs  function.rs  integer.rs  integral.rs  macros.rs  mul.rs  ops.rs  pow.rs  rational.rs  symbol.rs
hecate/src/symbolic/expr/ops/: compare.rs  factor.rs  parse.rs  subs.rs
hecate/symbolic/: Cargo.toml
hecate/symbolic/src/: abc.rs  expr.rs  lib.rs  system.rs
hecate/symbolic/src/expr/: add.rs  diff.rs  eq.rs  function.rs  pow.rs  rational.rs  symbol.rs
hecate/symbolic/src/expr/ops/: compare.rs  factor.rs  parse.rs
minimal/: CMakeLists.txt  minimal.cpp
minimal/.cache/clangd/index/: minimal.cpp.E4B92E15854D07EE.idx
sandbox/deal.ii/: CMakeLists.txt
sandbox/deal.ii/src/: chat-gpt-scalar-wave-newmark.cc  experiment-1.cpp  gpt-4o-2.cpp  gpt4o.cpp  step-2.cpp  step-23.cpp  step-3.cpp  test.cpp
sandbox/feelpp-1/: CMakeLists.txt  minimal.cpp
sandbox/jupyter/: .gitignore  1.ipynb  batch_tutorials_prompt_completion.jsonl  code.ipynb  completion.cpp  deal. II scraping.ipynb  pyproject.toml  requirements.txt  step_1.md  step_1_completion.cpp  step_1_pair.json  step_1_prompt.txt  step_2.md  step_87.md  sympy.ipynb  tutorials.jsonl  tutorials.parquet
sandbox/petsc/: CMakeLists.txt  main.cpp
(+2 files in other folders)
