[workspace]
resolver = "3"
members = [
  "hecate",
  "cli",
  "mcp-server",
  "migration",
  "entity",
]

[workspace.package]
edition = "2024"
license-file = "../LICENSE"

[workspace.dependencies]
log = "0.4.27"
thiserror = "2.0.12"
anyhow = "1.0.98"
schemars = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sea-orm = { version = "1.1.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
