[workspace]
resolver = "3"
members = [
  "hecate",
  "cli",
  "mcp-server",
  "migration",
  "entity",
  "executor",
  "symbolic",
]

[workspace.package]
edition = "2024"
license-file = "../LICENSE"
rust-version = "1.88"
version = "0.2.3"
repository = "https://github.com/ShaitanLyss/these"

[workspace.dependencies]
log = "0.4.27"
thiserror = "2.0.12"
anyhow = "1.0.98"
schemars = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
sea-orm = { version = "1.1.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
regex = "1.11.1"
env_logger = "0.11.8"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "from_str", "into_iterator", "from"] }
tokio = "1.46.0"
serde_json = "1.0.140"
rmcp = { version = "0.3.0", features = ["server", "transport-io"] }
whoami = "1.6.0"
async-fs = "2.1.2"
hecate-symrs = { path = "symbolic", version = "0.2.3"}
