[package]
name = "hecate-cli"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Command line interface to the Hecate simulation code generator!"
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "hecate"
path = "src/main.rs"

[features]
js = []
cpp = []



[dependencies]
hecate-lib = { workspace = true }
hecate-symrs = { workspace = true }
clap = { version = "4.5.36", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9.34"
anyhow = { workspace = true }
tera = {version = "1.20.0", default-features = false}
env_logger = { workspace = true }
log = { workspace = true }
