[package]
name = "hecate-entity"
edition = "2024"
rust-version.workspace = true
version.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Database entities for the Hecate simulation code generator!"


[dependencies]
sea-orm = { workspace = true }
hecate-lib = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
hecate-executor = { workspace = true }
thiserror = { workspace = true }
regex = {workspace = true}
serde_json = {workspace = true}
rmcp.workspace = true
log.workspace = true
whoami.workspace = true
