[package]
name = "hecate-executor"
edition = "2024"
version = "0.1.0"
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true
description = "The local / remote command executor for the Hecate simulation code generator!"


[dependencies]
russh = "0.53.0"
russh-config = "0.50.0"
thiserror = { workspace = true }
regex = {workspace = true}
shellexpand = "3.1.1"
log = { workspace = true }
tokio = { workspace = true }
whoami.workspace = true
async-fs.workspace = true
