[package]
name = "hecate-mcp-server"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
hecate = { path = "../hecate" }
rmcp = { git = "https://github.com/jokemanfire/rust-sdk.git", branch = "deps", version = "0.1.5", features = ["server", "transport-io"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = "1.45.1"
tracing-subscriber = "0.3.19"
serde = "1.0.219"
serde_json = "1.0.140"
sea-orm = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"] }
entity = { path = "../entity"}
migration = { path = "../migration"}
dirs = "6.0.0"

