[package]
name = "hecate-mcp-server"
version = "0.1.0"
edition = "2024"
license-file.workspace = true
rust-version.workspace = true

[dependencies]
hecate-lib = { workspace = true }
rmcp.workspace = true
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
log = { workspace = true }
serde = "1.0.219"
serde_json = "1.0.140"
schemars = { workspace = true }
sea-orm = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"] }
hecate-entity = { path = "../entity"}
migration = { path = "../migration"}
dirs = "6.0.0"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
regex = {workspace = true}
hecate-executor = { path = "../executor" }

