[package]
name = "hecate-migration"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Database migrations for the Hecate simulation code generator!"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "sqlx-sqlite", "runtime-tokio-rustls"
]
